--- a/public/css/home.css
+++ b/public/css/home.css
@@ -65,7 +65,7 @@
 
 .home-card__domain {
   font-size: var(--text-xs);
-  color: var(--accent);
+  color: var(--link);
 }
 
 .home-footer {
